# PixelAnnotationTool

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  color_test.json  config.json  create_poly_json.py  git_version.cmake.in  pixel_annotation_tool_version.h.in
scripts_to_build/: README.md  build_linux.sh  make.bat  win_make_vc14_x64_abreheret.bat  win_make_vc14_x64_abreheret_qt5.10.bat  win_make_vc14_x64_to_edit.bat  win_make_vc17_x64.bat
src/: about_dialog.cpp  about_dialog.h  image_canvas.cpp  image_canvas.h  image_mask.cpp  image_mask.h  label_widget.cpp  label_widget.h  labels.cpp  labels.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  slic_parameter.cpp  slic_parameter.h  utils.cpp  utils.h
